[gd_scene load_steps=6 format=2]

[ext_resource path="res://PuzzleProperties.gd" type="Script" id=1]
[ext_resource path="res://textures/abstract-art-decoration-1029624.jpg" type="Texture" id=2]
[ext_resource path="res://custom_font.tres" type="Theme" id=3]
[ext_resource path="res://textures/full_button_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Clock.tscn" type="PackedScene" id=5]

[node name="PuzzleProperties" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Form" type="Container" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_right = 233.0
rect_min_size = Vector2( 458, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="NameEdit" type="LineEdit" parent="Form" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = -18.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
text = "No Name"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="DifficultyCB" type="OptionButton" parent="Form" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 13.0
margin_top = 120.0
margin_right = -245.0
margin_bottom = 159.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Very easy"
flat = false
align = 0
items = [ "Very easy", null, false, -1, null, "Easy", null, false, -1, null, "Average", null, false, -1, null, "Hard", null, false, -1, null, "Very hard", null, false, -1, null ]
selected = 0
_sections_unfolded = [ "Theme", "custom_fonts", "custom_styles" ]

[node name="Label" type="Label" parent="Form/DifficultyCB" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -40.0
margin_right = 155.0
margin_bottom = -7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Difficulty"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_colors", "custom_fonts" ]

[node name="LifesEdit" type="SpinBox" parent="Form" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 120.0
margin_bottom = 163.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
min_value = 1.0
max_value = 10.0
step = 1.0
page = 0.0
value = 5.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""
_sections_unfolded = [ "Theme", "custom_icons" ]

[node name="Label2" type="Label" parent="Form/LifesEdit" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -40.0
margin_right = 155.0
margin_bottom = -7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lifes"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_colors", "custom_fonts" ]

[node name="WarningTimeEdit" type="LineEdit" parent="Form" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 13.0
margin_top = 210.0
margin_right = -243.0
margin_bottom = 253.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
text = "00:00"
focus_mode = 2
context_menu_enabled = false
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Theme" ]

[node name="Label3" type="Label" parent="Form/WarningTimeEdit" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -40.0
margin_right = 215.0
margin_bottom = -7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Warning limit"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_colors", "custom_fonts" ]

[node name="GameoverTimeEdit" type="LineEdit" parent="Form" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 13.0
margin_top = 300.0
margin_right = -243.0
margin_bottom = 343.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
text = "00:00"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Theme" ]

[node name="Label4" type="Label" parent="Form/GameoverTimeEdit" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = -40.0
margin_right = 163.0
margin_bottom = -7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Time limit"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_colors", "custom_fonts" ]

[node name="BuilderBtn" type="Button" parent="Form" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 13.0
margin_top = 370.0
margin_right = -245.0
margin_bottom = 420.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Builder"
flat = false
align = 1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="HintBtn" type="Button" parent="Form" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 243.0
margin_top = 370.0
margin_right = -18.0
margin_bottom = 420.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Hints"
flat = false
align = 1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="QuitBtn" type="Button" parent="Form" index="7"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -60.0
margin_right = -18.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="Clock" parent="Form" index="8" instance=ExtResource( 5 )]

margin_left = 263.0
margin_top = 190.0
margin_right = 403.0
margin_bottom = 330.0

[connection signal="focus_exited" from="Form/NameEdit" to="." method="_on_NameEdit_focus_exited"]

[connection signal="item_selected" from="Form/DifficultyCB" to="." method="_on_DifficultyCB_item_selected"]

[connection signal="value_changed" from="Form/LifesEdit" to="." method="_on_LifesEdit_value_changed"]

[connection signal="focus_exited" from="Form/WarningTimeEdit" to="." method="_on_WarningTimeEdit_focus_exited"]

[connection signal="focus_exited" from="Form/GameoverTimeEdit" to="." method="_on_GameoverTimeEdit_focus_exited"]

[connection signal="pressed" from="Form/BuilderBtn" to="." method="_on_BuilderBtn_pressed"]

[connection signal="pressed" from="Form/HintBtn" to="." method="_on_HintBtn_pressed"]

[connection signal="pressed" from="Form/QuitBtn" to="." method="_on_QuitBtn_pressed"]


